# kits

./: .gitignore  README.md  TODO  run.sh
src/: CMakeLists.txt  main.cpp
src/common/: document_reader.cpp  txt_document_reader.cpp
src/include/: document_reader.h
src/include/common/: document_reader.h  txt_document_reader.h
src/include/kits/: kit.h  kits_finder.h  receipt.h
src/kits/: kit.cpp  kits_finder.cpp  receipt.cpp
